# nii-preprocess

./: .gitignore  AK_process.py  README.md  check_nii.py  ctmri.py  getname_txt.py  getsplit.py  labels_unique.py  move.py  move_amos.py  niitoh5.py  preprocess.py  preprocess24.py  preprocess_amos.py  preprocess_flare.py  preprocess_new.py  preprocess_notuse.py  preprocess_self.py  pyproject.toml  requirements.txt  savenii2h5.py  synapse_process.py  test_preprocess.py
configs/: paths.example.yaml
med_preprocess/: __init__.py
med_preprocess/io/: __init__.py  h5_converter.py  nii_io.py
med_preprocess/splits/: __init__.py  writer.py
med_preprocess/transforms/: __init__.py  resample.py
scripts/: README.md
scripts/cli/: generate_splits.py  nii_to_h5.py
scripts/datasets/abdomen_ct/: getsplit_ak.py  move.py
scripts/datasets/amos/: getsplit_amos.py  nii2h5_amos.py  preprocess_amos.py
scripts/datasets/flare/: 24preprocess_byzhe.py  getsplit.py  niitoh5.py  preprocess24.py  preprocess_flare.py  preprocess_new.py  savenii2h5.py
scripts/datasets/synapse/: nii2h5_synapse.py  synapse_check.py  synapse_preprocess.py
scripts/legacy/: preprocess_notuse.py
scripts/tools/: check_datacenter.py  check_nii.py  getname_txt.py  labels_unique.py  rename.py
