[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "med-preprocess"
version = "0.1.0"
description = "Medical CT preprocessing pipelines for semi-supervised segmentation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "h5py>=3.8",
  "nibabel>=5.0",
  "numpy>=1.23",
  "scikit-image>=0.20",
  "SimpleITK>=2.2",
]

[project.optional-dependencies]
monai = ["torch>=2.0", "monai>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["med_preprocess*"]
